# llm-harness

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pyproject.toml  update_deps.py
llm-harness-js/: AGENTS.md  package.json  tsconfig.json
llm-harness-js/scripts/: run-aa-stats.mjs
llm-harness-js/src/: index.ts
llm-harness-js/src/agents/: AGENTS.md  agents.ts  index.ts
llm-harness-js/src/agents/youtube/: AGENTS.md  index.ts  prompts.ts  schemas.ts  summarizer-gemini.ts  summarizer-react.ts  summarizer.ts  summarizerGemini.ts  summarizerLite.ts
llm-harness-js/src/clients/: AGENTS.md  aaStats.ts  gemini.ts  index.ts  modelStats.ts  multimodal.ts  openrouter.ts  parser.ts  usage.ts
llm-harness-js/src/clients/parsers/: chunks.ts  events.ts  extractors.ts  metadata.ts  responses.ts  types.ts
llm-harness-js/src/stats/: AGENTS.md  evalModelsUnion.ts  evalStats.ts  image-stats.ts  index.ts  llm-stats.ts  matchModels.ts  matchModelsSelected.ts  model-stats.ts  modelStats.ts  utils.ts
llm-harness-js/src/stats/data-sources/: arena-ai-image.ts  arena-ai.ts  artificial-analysis-image.ts  artificial-analysis-llm.ts  artificial-analysis.ts  artificialAnalysis.ts  matcher.ts  models-dev.ts  modelsDev.ts
llm-harness-js/src/stats/data-sources/image/: arena-ai.ts  matcher.ts
llm-harness-js/src/stats/data-sources/llm/: artificial-analysis-api.ts  artificial-analysis-scraper.ts  artificial-analysis.ts  matcher.ts  models-dev.ts  openrouter-scraper.ts
llm-harness-js/src/stats/image/: artificial-analysis.ts  image-stats.ts  matcher.ts
llm-harness-js/src/stats/image/image-stats/: cache.ts  final-stage.ts  match-stage.ts  source-stage.ts  types.ts
llm-harness-js/src/stats/image/sources/: arena-ai.ts  artificial-analysis.ts
llm-harness-js/src/stats/llm/: llm-stats.ts  matcher.ts  shared.ts
llm-harness-js/src/stats/llm/llm-stats/: cache.ts  cleanup.ts  final-stage.ts  match-stage.ts  openrouter-stage.ts  pipeline.ts  postprocess.ts  scoring.ts  source-stage.ts  types.ts
llm-harness-js/src/stats/llm/matcher/: pipeline.ts  scoring.ts  source-model.ts  tokenize.ts  types.ts
llm-harness-js/src/stats/llm/sources/: artificial-analysis-api.ts  artificial-analysis-scraper.ts  models-dev.ts  openrouter-scraper.ts
llm-harness-js/src/tools/: AGENTS.md  index.ts
llm-harness-js/src/tools/fs/: AGENTS.md  fast-copy.ts  fastCopy.ts  fs-tools.ts  fsTools.ts  index.ts
llm-harness-js/src/tools/web/: AGENTS.md  index.ts  webloader.ts
llm-harness-js/src/tools/youtube/: AGENTS.md  index.ts  scraper.ts
llm-harness-js/src/utils/: AGENTS.md  image-utils.ts  index.ts  textUtils.ts  youtube-utils.ts
llm_harness/: AGENTS.md  __init__.py  fs_tools.py  gemini.py  image_utils.py  parsing.py  text_utils.py  universal.py  usage_tracker.py  utils.py
llm_harness/agents/: AGENTS.md  __init__.py  agents.py  tabular_agent.py
llm_harness/agents/fixer/: AGENTS.md  __init__.py  fixer.py  graph.py  prompts.py  state.py
llm_harness/agents/fixer/nodes/: __init__.py  common.py  fix.py  review.py
llm_harness/agents/youtube/: AGENTS.md  __init__.py  prompts.py  schemas.py  summarizer.py  summarizer_gemini.py  summarizer_lite.py  summarizer_react.py
llm_harness/clients/: AGENTS.md  __init__.py  aa_stats.py  agents.py  gemini.py  multimodal.py  openai.py  openrouter.py  parser.py  usage.py  utils.py
llm_harness/stats/: AGENTS.md  __init__.py  model_stats.py  utils.py
llm_harness/stats/data_sources/: __init__.py  artificial_analysis.py  matcher.py  models_dev.py
llm_harness/stats/image/: AGENTS.md  __init__.py  matcher.py
llm_harness/stats/image/image_stats/: AGENTS.md  __init__.py  cache.py  final_stage.py  match_stage.py  source_stage.py  types.py
llm_harness/stats/image/sources/: AGENTS.md  __init__.py  arena_ai.py  artificial_analysis.py
llm_harness/stats/llm/: __init__.py  llm_stats.py  shared.py
llm_harness/stats/llm/llm_stats_stages/: AGENTS.md  cache.py  final_stage.py  match_stage.py  openrouter_stage.py  scoring.py  source_stage.py  types.py
llm_harness/stats/llm/matcher/: AGENTS.md  __init__.py  pipeline.py  scoring.py  source_model.py  tokenize.py  types.py
llm_harness/stats/llm/sources/: __init__.py  artificial_analysis_api.py  artificial_analysis_scraper.py  models_dev.py  openrouter_scraper.py
llm_harness/tools/: AGENTS.md  __init__.py
llm_harness/tools/fs/: AGENTS.md  apply_patch.py  fast_copy.py  fs_tools.py  hashline.py
llm_harness/tools/skills/: __init__.py  tools.py
llm_harness/tools/sql/: __init__.py  query.py  sql_agent.py  tools.py
llm_harness/tools/tabular/: ingestion.py  segmentation.py  storage.py  tools.py
llm_harness/tools/web/: AGENTS.md  __init__.py  webloader.py
llm_harness/tools/youtube/: AGENTS.md  __init__.py  prompts.py  schemas.py  scraper.py  scrapper.py  summarizer.py  summarizer_gemini.py  summarizer_lite.py  utils.py
llm_harness/utils/: AGENTS.md  __init__.py  image_utils.py  langgraph_utils.py  text_utils.py  youtube_utils.py
