[project]
name = "llm_harness"
version = "0.1.0"
description = "Personal LLM harness"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "docling>=2.74.0",
    "exa-py>=2.4.0",
    "google-genai>=1.64.0",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "langchain-openrouter>=0.0.2",
    "langgraph>=1.0.9",
    "opencc-python-reimplemented>=0.1.7",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.3.3",
    "ruff>=0.14.14",
]

[project.optional-dependencies]
image = [
    "pillow>=11.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_harness"]

[tool.ruff]
line-length = 180

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F",   # Pyflakes, pycodestyle
    "B", "B9",               # flake8-bugbear
    "I",                     # isort
    "UP",                    # pyupgrade
    "SIM",                   # flake8-simplify
    "C4",                    # flake8-comprehensions
    "ARG",                   # flake8-unused-arguments
    "DTZ",                   # flake8-datetimez
    "G",                     # flake8-logging-format
    "S",                     # flake8-bandit
    "RUF",                   # Ruff-specific rules
    "PT",                    # flake8-pytest-style
    "PIE",                   # flake8-pie
    "T20",                   # flake8-print
]
ignore = [
    "B008", "S101", "S105", "S106", "G004", "T201", "S112", "E731", "S311"
]
unfixable = ["DTZ", "S"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*" = ["S101", "ARG", "T20"]
"test_*.py" = ["S101", "ARG", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["package_name"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true
